Introduction On Kubernetes Ingress Controller/simple-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: demo-nginx-deployment
spec:
  selector:
    matchLabels:
      app: nginx-app
  replicas: 2
  template:
    metadata:
      labels:
        app: nginx-app
    spec:
      containers:
      - name: nginx-demo
        image: nginx
        ports:
        - containerPort: 80
