Introduction On Kubernetes Ingress Controller/ingress-nginx.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: demo-app-imesh-ai-http
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nginx-cluster-ip-service
            port:
                number: 80
